# ChangeLog for app-emacs/sokoban
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/sokoban/ChangeLog,v 1.3 2010/05/22 15:51:04 pacho Exp $

  22 May 2010; Pacho Ramos <pacho@gentoo.org> sokoban-1.04_p20030614.ebuild:
  stable amd64, bug 304179

  11 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  sokoban-1.04_p20030614.ebuild:
  stable x86, bug 304179

*sokoban-1.04_p20030614 (07 Jan 2010)

  07 Jan 2010; Ulrich Mueller <ulm@gentoo.org> +files/50sokoban-gentoo.el,
  +sokoban-1.04_p20030614.ebuild, +metadata.xml:
  Initial import, from Emacs overlay. Ebuild contributed by me.
