@@ -1,25 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX 50sokoban-gentoo.el 127 SHA256 3414bda517d6501c20a33e8f96ea6f44c38f426a114814de5863dccdb674f9ac SHA512 361a572d75a32639e37db650184a75dba80f8f63399d919bcf40252b04631e217e78663f03aa9e506f20bb2502816201d49cc6630be3c67177a6ff9895c7a24c WHIRLPOOL cde7e68d7977667f3b98d223019753c1ad3434581363fced7d8370683661186c64bd69b870d6bb0e0789383f4d23dc92a5bf826ee5385e71427f91583e598ee8
 DIST sokoban-1.04_p20030614.tar.bz2 10103 SHA256 5414d61938eb8eb094e9e33a3bd994c1b69a00a11f51610d9735b687bba85e66 SHA512 bc75b429b8c208ae9a4c583a0b7a90a43246cb19b7b6eab0093675acb7422f1ce1b55028af076727564bcf8fe149d13f63bd69c12da7cf79a2c432a94ef35e15 WHIRLPOOL 4406e6151099fe637bad7c69f01adc98bad4f0dcda8a2358410a02b6aba67ebb65640ef7d39aec317395eed385bb5f0b86865fa03f8c49bab24dddeab7f05231
+DIST sokoban-1.4.tar 61440 SHA256 8127798c25bb19ae8d9a4d8d9d3e24b43a5a1ec45b0c79f1003a66991157d3f9 SHA512 8c04f509013e1d8f6e8cc1e182ec253fc84870e5733623038ea03f2447952dcbc77236c64b158ea4e4613dafce192f2c4b50aac3e1e219a049a6a951a44a7ac1 WHIRLPOOL ca5cde6a3418a05c289b03352add8a9c615381c93e2ec13238e2955de8b3c06267ac351c873cdc0eba1abdc125d02d57275a72d1f4a1b4318434d437ec737e2f
 EBUILD sokoban-1.04_p20030614.ebuild 694 SHA256 fc1faa4562015119ab5dd0e176e55821bdb03d658106d9b73baa5e2691caf7c4 SHA512 19da0ff29a356950eee806c872c887d6358cb75ea9cd133a2aed4d72eddf254a9307b75426ab0b7ced32ed6e6b735791e9690d66f7bb237f7e75db34854f08a0 WHIRLPOOL b69e8a84bd4d6cc97b79c40ab4b3cd1bc58e9f200db866ba4efe866006cf745552452ebc68853f88739ed01fc923254688d2da7164ec1c2532c9e1b13ba96976
-MISC ChangeLog 653 SHA256 0160bb87115317dc9567876b70d71dde9e9b40265014301d29af48a5da9790fd SHA512 79096048d756fb6300cf2bf3fae50f4ac9a8c076ad920c208125f7900b0e4719f3129e64de93f4c5dddf001ef510eda0966cd0661bba55b5c8f39f71107a034a WHIRLPOOL eb32fc62f506527159faaf15f8b3c7f8a5af1e53d7b3d00b8d88ee8c31e7e7bff89108e937216714ad4c0dbd32a497418e824d77172e6a19ddf12c5cf1793e9d
+EBUILD sokoban-1.4.ebuild 605 SHA256 1accf0d4fa972d4c7431244001f73d680f40539128848277e4fc18be0ad72da2 SHA512 b283a8eeec3f3ba88d796fce379766a3ad06ba00caf27ead1da52e68cce1a067037365035cd9e616208c5946d0bf90e49277f92d95e966f6376db7e718f1b7f0 WHIRLPOOL a152a4a792c6c4346004943ab9252fb515063c2db2a688694a5885e146e2c6e34e11c3ca0dcbd96705e92896e04f4d3cdb2ebd02dbbf7628c4c8752bd4ba40f7
+MISC ChangeLog 796 SHA256 0f1e0f08bc8bb630bfa804b20b61d7580021dc0c5930fd333b955462ac381746 SHA512 d78df67791a0b4d6a309db42975f0edea3247a9c3dfd828ba62aab0c91f39b73e67865d572b4e97f6c7b36248be3dfdb2d8b9a7bebaace30c10e66051236b403 WHIRLPOOL bb20954d052d1b13af25ae99b61e5ff494a06dac737e55967e6cab27ef3b25703cc6d438a3f8cdf08965554d3ff9b067e58bc52c20cce992f638c22aebe63983
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9fUHAAoJEDxpGckxwJCBfJ8P/0NJ6chyUNEkEhgsIChZPbVQ
-FihPtowF2j5MbN+kecxNl8qt1cY9ASq49/Lxj15NexFSYybqi1TvyC2+MYJoR7kZ
-KQClr0tUz4udz7+BNRWa7Y+f1wZyP3kQ8OiV5tbKRF+vtIpC+XjwO0lykNEuopd6
-LF+OWFdXaXmVTCZbUdoDIXGjbY8WDp8svkFIwGGMb0P0OKQpAO5yvN2vvKP1dJ9c
-asXAIYSqDjgb5qP6bNrY7U4+ZNbJ8Sv8nR3iCFBScZWfDcQM2mvsdZnriryiXgo7
-fNaItEKedMPjjxqj+MkZ0G2xoqOAz9m/sRRyXjPfyWudn4TA6B8MqPLQSh/k0fNH
-NFxdbybEz/yHvKxvX0rIN6BvGRR+XRQp1ROP2OsdU/cLRSFLWZeDFx8RNYYEMhR3
-Um1d5CXtoCY6qYexvRPaLvNQ9odWFZHQXJx9dWHIrW3tBaNyOg0V9PP/+SMawJVV
-Y+n5iqsu0fEZpPbE3GpbehaZvo12IiD3BPEAG7jpPI1z7Y9WsPKRioKT+dOCt+AJ
-ZIfh47gw7rnXvf/n2AqiAr1BCywNOy6ZXirzyq79A05CsPHuPQjJ+RfGbUKNZdGm
-bc8ll3ukVXDonI6bkTEqlJkBnXN8jln46HZV2zj8eylH/E9vPx+I4y5B2hcSmrIO
-0MW5b8Tpb5pOS61J6/r5
-=sG0S
+iQGcBAEBCAAGBQJS+dbhAAoJEJQzkH1pP7W4JQwL/1RmF2qrPsuQe2k9kD1r4Fof
+vYKe7zmz/d/IvL7LVKpKlkzK00ohTw1QrDv9qE4+8AiTiG54wcnz7rBdLZgLcdul
+HdxgPSUs286l1GMQtbkY0muJ6e19YHIEfu1XgMkblLPS3+AVEqCrL7ZDir4skqox
+1OTayoLEgN7bG+BJ4gh1DWGvBmEZnJUla/cvP8j8UQY7bS62Byc+zWdL0TMo3kRl
+3yCOzuTf4xXw+pNk2+G+z8JW4mSic72hFa+wxJBj3WPEtNDyx7aE0QXp5GDMHLWZ
+b2QeJ8SVJVLuTcS8vMiKGV0JDSapWUYtXpVI9IN7zgNBO/nn6BnLSbI9IbXdOZSA
+j0sGaOlDqLlhgym+iZw05B9RMCk7LKVlT4CuBs0aAmudMKl7NgX+HeUcoxPE7qmT
+l+I8720N5yqm4GdcvaFXyfcMXa1dHI5VLi8gp5HwHQ/G0DbSvGCc6cmWUiWjRdLC
+QQNiJyOI/ffnLQ666DwfGfDHlLkTh9A7N+f6tHz4cQ==
+=nPWg
 -----END PGP SIGNATURE-----
