@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup unpack
+DEPEND=>=virtual/emacs-21
+DESCRIPTION=Implementation of Sokoban for Emacs
+EAPI=5
+HOMEPAGE=http://elpa.gnu.org/packages/sokoban.html
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3+
+RDEPEND=>=virtual/emacs-21
+SLOT=0
+SRC_URI=http://elpa.gnu.org/packages/sokoban-1.4.tar
+_eclasses_=elisp	ae11b438eee6c692e6c94c9a86999514	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=24fffa954d8b78e131c898da76ca0e69
